Issue #8: サジェスチョンリストのホバースタイルを調整。

--- a/src/static/css/location-search.css
+++ b/src/static/css/location-search.css
@@ -55,10 +55,7 @@ body {
   padding: 0.5em;
 }
 
-.filter-title-suggetions li:hover {
-  background-color: #f4f4f4;
-}
-
+.filter-title-suggetions li:hover,
 .filter-title-suggetions li.active {
   background-color: #eee;
 }
