--- a/src/static/css/location-search.css
+++ b/src/static/css/location-search.css
@@ -45,7 +45,10 @@ body {
   margin-top: 0;
   margin-bottom: 0;
   position: absolute;
-  max-height: 200px;
+
+  /* 210 = 30 x 7 */
+  /* 30 = 14 + 8 x 2 */
+  max-height: 210px;
   overflow: scroll;
   z-index: 10;
 }
@@ -53,6 +56,8 @@ body {
 .filter-title-suggetions li {
   background-color: #f8f8f8;
   padding: 0.5em;
+  line-height: 14px;
+  padding: 8px;
 }
 
 .filter-title-suggetions li:hover,
