Issue #8: タイトル入力フィールドに placeholder を追加。

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,6 +10,7 @@
         <div class="filter-form">
           <div class="filter-form-inner">
             <input type="text"
+              placeholder="title"
               class="filter-title"
               ref="title"
               v-model="title"
