Issue #8: HTML の title などが無かったので追加。

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+<html lang="ja">
 <html>
   <head>
+    <meta charset="UTF-8">
+    <title>SF Movie Locations Search</title>
     <link rel="stylesheet" href="{{ config.ROOT }}/static/css/location-search.css">
   </head>
   <body>
