Issue #14: ページャ導入に合わせて表示中の情報のメタ情報（カウント）を更新。あわせて使わなかったページャ関連コードを削除。

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -39,7 +39,7 @@
           <status-message v-bind:message="message" v-if="message" />
         </div>
         <div class="current-count-wrapper">
-          <current-count v-bind:count="count" v-if="count" />
+          <current-count v-bind:pager-data="pagerData" />
         </div>
         <div class="pager-wrapper">
           <paginate
