Issue #17: 結果が 0 件の場合にテーブルを表示しない形に変更。

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -52,7 +52,7 @@
         </div>
         <div id="location-map"></div>
         <div class="result-table-wrapper">
-          <table>
+          <table v-if="locations.length">
             <thead>
               <tr>
                 <th class="location-table-row-title">Title</th>
