Issue #17: 結果が 0 件の場合にページャを表示しない形に変更。

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -43,6 +43,7 @@
         </div>
         <div class="pager-wrapper">
           <paginate
+            v-show="pagerData.currentItems"
             ref="pager"
             v-bind:page-count="pagerData.totalPages"
             v-bind:click-handler="changePage"
